--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </li>
                 
                 <li class="nav-item">
-                  <a class="nav-link" href="#contact"><b> Contact</b></a>
+                  <a class="nav-link" href="contact.html"><b> Contact</b></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="about.html"> <b>About</b></a>
@@ -342,15 +342,14 @@
                 KARAN PARVE
               </h5>
               <h6>
-                Founder And CEO
+               I have been an entrepreneur for more than six years, and I constantly strive to learn new things and apply that knowledge to create new projects.
               </h6>
             </div>
           </div>
         </div>
         <div class="client_detail">
           <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking at its layout. The point of using Lorem
+              <b>KARAN PARVE</b> is a Found
           </p>
         </div>
       </div>
