--- a/index.html
+++ b/index.html
@@ -342,14 +342,14 @@
                 KARAN PARVE
               </h5>
               <h6>
-               I have been an entrepreneur for more than six years, and I constantly strive to learn new things and apply that knowledge to create new projects.
+               Founder And CEO
               </h6>
             </div>
           </div>
         </div>
         <div class="client_detail">
           <p>
-              <b>KARAN PARVE</b> is a Found
+           I have been an entrepreneur for more than six years, and I constantly strive to learn new things and apply that knowledge to create new projects.
           </p>
         </div>
       </div>
