--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#top"><b>Home </b><span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html"><b>Home </b><span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="services.html"> <b>Services</b> </a>
